<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cook"
            android:title="@string/cook"
            android:icon="@drawable/baseline_rice_bowl_24"/>
        <item
            android:id="@+id/nav_favourites"
            android:title="@string/favourites"
            android:icon="@drawable/baseline_favorite_border_24" />
        <item
            android:id="@+id/nav_manual"
            android:title="@string/manual"
            android:icon="@drawable/baseline_handyman_24" />
        <item
            android:id="@+id/nav_device"
            android:title="@string/device"
            android:icon="@drawable/baseline_devices_24" />
        <item
            android:id="@+id/nav_more"
            android:title="@string/more"
            android:icon="@drawable/baseline_more_vert_24" />

    </group>
</menu>